--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
 
     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- vuejs -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- script -->
+    <script defer src="js/script.js"></script>
 </head>
 
 <body>
+    <div id="root">
 
+    </div>
 </body>
 
 </html>
