--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
 
 <body>
     <div id="root">
-
+        <main>
+            <div class="container d-flex justify-content-center ">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-header">
+                        Todo List:
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"></li>
+                    </ul>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 
