--- a/my_app/index.html
+++ b/my_app/index.html
@@ -42,7 +42,7 @@
                     <form class="m-2">
                         <div class="mb-3">
                             <label for="new_task" class="form-label">Aggiungi una nuova task</label>
-                            <input type="email" class="form-control" id="new_task">
+                            <input type="text" class="form-control" id="new_task" placeholder="Nuova task...">
                         </div>
                         <button type="submit" class="btn btn-primary">Aggiungi</button>
                     </form>
