--- a/my_app/index.html
+++ b/my_app/index.html
@@ -31,7 +31,7 @@
             <div class="container d-flex justify-content-center ">
                 <div class="card" style="width: 18rem;">
                     <div class="card-header">
-                        Todo List:
+                        <h6 class="mb-0 text-center">Todo List :</h6>
                     </div>
                     <ul class="list-group list-group-flush mb-2">
 
